big migration and changes