@@ -2,23 +2,24 @@ package themcbros.usefulmachinery.compat.jei.categories;
 
 import com.mojang.blaze3d.vertex.PoseStack;
 import mezz.jei.api.constants.VanillaTypes;
-import mezz.jei.api.gui.IRecipeLayout;
+import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.gui.drawable.IDrawable;
 import mezz.jei.api.gui.drawable.IDrawableAnimated;
-import mezz.jei.api.gui.ingredient.IGuiItemStackGroup;
 import mezz.jei.api.helpers.IGuiHelper;
-import mezz.jei.api.ingredients.IIngredients;
+import mezz.jei.api.recipe.IFocusGroup;
+import mezz.jei.api.recipe.RecipeIngredientRole;
+import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import themcbros.usefulmachinery.UsefulMachinery;
-import themcbros.usefulmachinery.compat.jei.ModRecipeCategoryUid;
-import themcbros.usefulmachinery.init.MachineryItems;
+import themcbros.usefulmachinery.compat.jei.MachineryJeiRecipeTypes;
+import themcbros.usefulmachinery.init.MachineryBlocks;
 import themcbros.usefulmachinery.recipes.CompactingRecipe;
 import themcbros.usefulmachinery.util.TextUtils;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class CompactingCategory implements IRecipeCategory<CompactingRecipe> {
     private static final ResourceLocation TEXTURES = UsefulMachinery.getId("textures/gui/container/electric_smelter.png");
@@ -27,7 +28,7 @@ public class CompactingCategory implements IRecipeCategory<CompactingRecipe> {
     private final IDrawableAnimated arrow, energyBar;
 
     public CompactingCategory(IGuiHelper helper) {
-        this.icon = helper.createDrawableIngredient(new ItemStack(MachineryItems.COMPACTOR));
+        this.icon = helper.createDrawableIngredient(VanillaTypes.ITEM_STACK, new ItemStack(MachineryBlocks.COMPACTOR.get()));
         this.background = helper.createDrawable(TEXTURES, 34, 16, 132, 52);
 
         this.arrow = helper.drawableBuilder(TEXTURES, 176, 14, 24, 17).buildAnimated(200, IDrawableAnimated.StartDirection.LEFT, false);
@@ -42,12 +43,17 @@ public class CompactingCategory implements IRecipeCategory<CompactingRecipe> {
 
     @Override
     public ResourceLocation getUid() {
-        return ModRecipeCategoryUid.COMPACTING;
+        return getRecipeType().getUid();
     }
 
     @Override
     public Class<? extends CompactingRecipe> getRecipeClass() {
-        return CompactingRecipe.class;
+        return getRecipeType().getRecipeClass();
+    }
+
+    @Override
+    public RecipeType<CompactingRecipe> getRecipeType() {
+        return MachineryJeiRecipeTypes.COMPACTING;
     }
 
     @Override
@@ -66,22 +72,14 @@ public class CompactingCategory implements IRecipeCategory<CompactingRecipe> {
     }
 
     @Override
-    public void setIngredients(CompactingRecipe recipe, IIngredients ingredients) {
+    public void setRecipe(IRecipeLayoutBuilder builder, CompactingRecipe recipe, IFocusGroup focusGroup) {
         ItemStack[] stacks = recipe.getIngredients().get(0).getItems();
 
         for (ItemStack stack : stacks) {
             stack.setCount(recipe.getCount());
         }
 
-        ingredients.setInputs(VanillaTypes.ITEM, Arrays.asList(stacks));
-        ingredients.setOutput(VanillaTypes.ITEM, recipe.getResultItem());
-    }
-
-    @Override
-    public void setRecipe(IRecipeLayout recipeLayout, CompactingRecipe recipe, IIngredients ingredients) {
-        IGuiItemStackGroup guiItemStacks = recipeLayout.getItemStacks();
-        guiItemStacks.init(0, true, 0, 16);
-        guiItemStacks.init(1, false, 60, 16);
-        guiItemStacks.set(ingredients);
+        builder.addSlot(RecipeIngredientRole.INPUT, 0, 16).addItemStacks(List.of(stacks));
+        builder.addSlot(RecipeIngredientRole.OUTPUT, 60, 16).addItemStack(recipe.getResultItem());
     }
 }
